--- a/package.json
+++ b/package.json
@@ -1,55 +1,61 @@
 {
-    "author": "Olivier Poitrey <rs@dailymotion.com>",
-    "name": "pushd",
-    "description": "Blazing fast multi-protocol mobile push notification service",
-    "version": "1.5.10",
-    "homepage": "https://github.com/rs/pushd",
-    "keywords": ["push", "notification", "apns", "c2dm", "mpns", "ios", "android", "windows", "phone"],
-    "repository":
+  "author": "Olivier Poitrey <rs@dailymotion.com>",
+  "name": "pushd",
+  "description": "Blazing fast multi-protocol mobile push notification service",
+  "version": "1.5.10",
+  "homepage": "https://github.com/rs/pushd",
+  "keywords": [
+    "push",
+    "notification",
+    "apns",
+    "c2dm",
+    "mpns",
+    "ios",
+    "android",
+    "windows",
+    "phone"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rs/pushd.git"
+  },
+  "preferGlobal": "true",
+  "bin": {
+    "pushd-server": "./server.js"
+  },
+  "directories": {
+    "lib": "./lib"
+  },
+  "scripts": {
+    "start": "sudo node server.js",
+    "test": "mocha --compilers coffee:coffee-script --reporter spec tests/*.coffee"
+  },
+  "engines": {
+    "node": "~0.8.19"
+  },
+  "dependencies": {
+    "coffee-script": "~1.2.0",
+    "apn": "1.3.2",
+    "c2dm": "1.1.0",
+    "node-gcm": "0.9.6",
+    "mpns": "1.2.7",
+    "async": "~0.2.5",
+    "express": "~3.1.0",
+    "hiredis": "~0.1.14",
+    "redis": "~0.8.2",
+    "netmask": "~0.0.2",
+    "winston": "~0.6.2",
+    "junction": "*",
+    "node-xmpp": "~0.6.3"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "should": "*"
+  },
+  "licenses": [
     {
-        "type": "git",
-        "url": "git://github.com/rs/pushd.git"
-    },
-    "preferGlobal": "true",
-    "bin":
-    {
-        "pushd-server": "./server.js"
-    },
-    "directories":
-    {
-        "lib": "./lib"
-    },
-    "scripts":
-    {
-        "start": "sudo node server.js",
-        "test": "mocha --compilers coffee:coffee-script --reporter spec tests/*.coffee"
-    },
-    "engines":
-    {
-        "node": "~0.8.19"
-    },
-    "dependencies":
-    {
-        "coffee-script": "~1.2.0",
-        "apn": "1.3.2",
-        "c2dm": "1.1.0",
-        "node-gcm": "0.9.6",
-        "mpns": "1.2.7",
-        "async": "~0.2.5",
-        "express": "~3.1.0",
-        "hiredis": "~0.1.14",
-        "redis": "~0.8.2",
-        "netmask": "~0.0.2",
-        "winston": "~0.6.2"
-    },
-    "devDependencies":
-    {
-        "mocha": "*",
-        "should": "*"
-    },
-    "licenses":
-    [{
       "type": "MIT",
       "url": "https://github.com/rs/pushd/raw/master/LICENSE"
-    }]
+    }
+  ]
 }
