--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "winston": "~0.6.2",
     "junction": "*",
     "node-xmpp": "~0.6.3",
-    "generate-key": "0.0.6"
+    "generate-key": "0.0.6",
+    "secure_random": "~0.1.0"
   },
   "devDependencies": {
     "mocha": "*",
